# rusto

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  DEPLOY-ARM.md  DEPLOY.md  README.md  README_DEPLOY.md  TROUBLESHOOT.md  config.toml  setup-ec2.sh
.claude/: settings.local.json
.github/workflows/: ci.yml  deploy.yml
docs/: DEPLOYMENT.md  TRADING_LOGIC_KR.md
scripts/: deploy.sh  tune_strategy.sh
src/: config.rs  discord.rs  lib.rs  main.rs  order_flow.rs  range_bar.rs  risk.rs  strategy.rs  types.rs  volume_profile.rs
src/binance/: exchange_info.rs  mod.rs  time_sync.rs
src/market_data/: binance_ws.rs  mod.rs  types.rs
src/simulator/: engine.rs  mod.rs  order_book.rs  position.rs  trade_log.rs
