[package]
name = "rusto"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
tungstenite = "0.24"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
rust_decimal = { version = "1", features = ["serde-with-str"] }
rust_decimal_macros = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
url = "2"
csv = "1"
reqwest = { version = "0.12", features = ["json"] }
dotenvy = "0.15"
rusqlite = { version = "0.32", features = ["bundled"] }
thiserror = "2"
